arrumando erro exemplo 3, 2.3

--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -128,13 +128,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# funcao que triangulariza o sistema\n",
     "\n",
-    "def tr1angulariza(M):\n",
+    "def triangulariza(M):\n",
     "    for j in range(n-1):\n",
     "        for i in range(j,n-1):\n",
     "            m = M[i+1,j]/M[j,j]\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.0000000000000004, -7.000000000000001, 6.000000000000001]\n"
+      "[array([-3.]), array([-7.]), array([6.])]\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,6 @@
     }
    ],
    "source": [
-    "# Contém erro!!!\n",
     "import numpy as np\n",
     "A = np.array([[3.,2.,4.],\n",
     "              [1.,1.,2.],\n",
@@ -325,19 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'solve_U' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-35-88f1a169407b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msolve_U\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'solve_U' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[-3.0000000000000004, -7.000000000000001, 6.000000000000001]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -370,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
