arrumado imagem exemplo 8

--- a/1_INTRODUCAO_ERROS/1.4_exemplos_aplicados.ipynb
+++ b/1_INTRODUCAO_ERROS/1.4_exemplos_aplicados.ipynb
@@ -716,7 +716,7 @@
     "\n",
     "Use um método de sua escolha para determinar o ponto de deflexão máxima (isto é, o valor de $x$ para o qual $dy/dx=0$). A seguir, substitua esse valor na equação para determinar o valor da deflexão máxima. Use os seguintes valores dos parâmetros: $L = 450 cm$, $E = 50.000 kN/cm^2$, $I=30.000 cm^4$ e $w_0=1,75 kN/cm$. Comente seus resultados e estime o erro.\n",
     "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/8_SOLUCAO_NUMERICA_DE_EDOs/imagens/euler_fig01.png\" width=\"400\">\n"
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/viga.jpg\" width=\"400\">\n"
    ]
   },
   {
@@ -745,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
