Atualizando 2.5, incluindo exemplos e complementando jacobi richardson

--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "$$x = Hx + g$$\n",
     "\n",
-    "em que $H = I - A$ e $g = b$. Assim, a solução $\\bar{x}$ de $x = Hx + g$ é  também, solução de $Ax = b$.\n",
+    "tal que a solução $\\bar{x}$ de $x = Hx + g$ é  também, solução de $Ax = b$. A partir dessa nova forma podemos obter um processo iterativo que fornecerá a sequência de soluções aproximadas que buscamos.\n",
     "\n",
-    "Seja $x^{(0)}$ uma aproximação inicial para a solução $\\bar{x}$, obtemos as aproximações sucessivas $x^{(k)}$ para a solução desejada usando o processo iterativo definido por:\n",
+    "Assim, seja $x^{(0)}$ uma aproximação inicial para a solução $\\bar{x}$, obtemos as aproximações sucessivas $x^{(k)}$ para a solução desejada usando o processo iterativo definido por:\n",
     "\n",
     "$$x^{(k)} = Hx^{(k-1)} + g$$"
    ]
@@ -29,13 +29,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Convergência \n",
+    "### Convergência \n",
+    "(Franco, 2006, p.169)\n",
     "\n",
     "### Teorema: \n",
     "A condição necessária e suficiente para a convergência do processo iterativo definido por $x = Hx + g$ é que $max \\{ |\\lambda_i |\\} < 1$, onde $\\lambda_i$ são os autovalores da matriz $H$. \n",
     "\n",
     "### Corolário (Critério geral de convergência):\n",
-    "Como consequência do teorema acima, ́o processo será convergente se para qualquer norma de matrizes, $\\| H \\| < 1$.\n",
+    "Como consequência do teorema acima, o processo será convergente se para qualquer norma de matrizes, $\\| H \\| < 1$.   \n",
     "\n",
     "#### Prova\n",
     "Na k-ésima iteração o vetor erro, dado por $e^{(k)}=\\bar{x}-x^{(k)}$ será \n",
@@ -92,22 +93,235 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convergência\n",
+    "Se a matriz $A=(a_{ij})_{i,j=1.,,,,n}$ do sistema $Ax=b$ for estritamente diagonalmente dominante, ou seja,\n",
+    "\n",
+    "$$ |a_{ii}| > \\sum_{j=1,i\\neq j} |a_{ij}| , i=1,...n$$\n",
+    "\n",
+    "então, o método iterativo de Jacobi-Richardson será convergente. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Critério de parada \n",
+    "Considerando que o processo iterativo está fornecendo uma sequência convergente, um critério de parada para o algoritmo pode ser dado por\n",
+    "\n",
+    "$$ \\frac{\\parallel x^n - x^{n-1}\\parallel }{\\parallel x^n\\parallel} < \\epsilon$$\n",
+    "\n",
+    "para alguma norma vetorial $\\parallel . \\parallel : V \\rightarrow R$ e alguma tolerância $\\epsilon$ pré estabelecida. \n",
+    "\n",
+    "Por conveniência, é comum utilizarmos a norma infinito:\n",
+    "\n",
+    "$$\\parallel x\\parallel _ \\infty = max \\{ |x_0|, |x_1|, ..., |x_n| \\}$$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exemplo 1\n",
+    "Usando o método interativo de Jacobi-Richardson, determine uma solução aproximada para o seguinte sistema de equações lineares, com aproximação inicial $x^{0}=(0,0,0)^t$ e precisão $\\epsilon = 0.01$. \n",
+    "\n",
+    "$$\n",
+    "\\left[\\begin{array}{ccc} \n",
+    "10 & 2 & 1\\\\\n",
+    "1 & 5 & 1\\\\\n",
+    "2 & 3 & 10\\\\\n",
+    "\\end{array} \\right]\n",
+    "\\left[\\begin{array}{c} \n",
+    "x_1\\\\\n",
+    "x_2\\\\\n",
+    "x_3\\\\\n",
+    "\\end{array} \\right]\n",
+    "=\n",
+    "\\left[\\begin{array}{c} \n",
+    "14\\\\\n",
+    "11\\\\\n",
+    "8\\\\\n",
+    "\\end{array} \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Solução:*\n",
+    "\n",
+    "Reescrevendo o sistema, obtemos:\n",
+    "\n",
+    "$$ \n",
+    "\\begin{cases} \n",
+    "x_1^{(k+1)} = \\frac{14}{10} - \\frac{2}{10}x_2^{(k)} - \\frac{1}{10}x_3^{(k)}\\\\ \n",
+    "x_2^{(k+1)} = \\frac{11}{5} - \\frac{1}{5}x_1^{(k)} - \\frac{1}{5}x_3^{(k)}\\\\ \n",
+    "x_3^{(k+1)} = \\frac{8}{10} - \\frac{2}{10}x_1^{(k)} - \\frac{3}{10}x_2^{(k)}\\\\ \n",
+    "\\end{cases} \n",
+    "$$\n",
+    "\n",
+    "Em pyton podemos fazer como segue"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([0.,0.,0.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def itera(x):\n",
+    "    x1 = 1.4 - 0.2*x[1] - 0.1*x[2]\n",
+    "    x2 = 2.2 - 0.2*x[0] - 0.2*x[2]\n",
+    "    x3 = 0.8 - 0.2*x[0] - 0.3*x[1]\n",
+    "    x = np.array([x1, x2, x3])\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=1, x= [1.4 2.2 0.8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#uma iteração\n",
+    "x = itera(x)\n",
+    "print (\"k=1,\", \"x=\",x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 [ 0.88  1.76 -0.14] 0.5340909090909091\n",
+      "3 [1.062 2.052 0.096] 0.1423001949317738\n",
+      "4 [ 0.98    1.9684 -0.028 ] 0.06299532615322088\n",
+      "5 [1.00912 2.0096  0.01348] 0.02064092356687896\n",
+      "6 [ 0.996732  1.99548  -0.004704] 0.009112594463487526\n"
+     ]
+    }
+   ],
+   "source": [
+    "#várias iterações e o erro\n",
+    "x_ant = x\n",
+    "for i in range(2,7):\n",
+    "    x = itera(x)\n",
+    "    err = np.max(abs(x-x_ant))/np.max(abs(x))\n",
+    "    x_ant = x\n",
+    "    print (i, x, err)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na forma matricial, o podemos escrever o processo iterativo da seguinte maneira, \n",
+    "\n",
+    "$$ x^{(k+1)} = Hx^{(k)} + g $$\n",
+    "\n",
+    "onde \n",
+    "\n",
+    "<p style=\"text-align:center;\">\n",
+    "$H = \n",
+    "\\left[\\begin{array}{ccccc} \n",
+    " 0 & -\\frac{a_{12}}{a_{11}} & -\\frac{a_{13}}{a_{11}} &\\cdots & -\\frac{a_{1n}}{a_{11}} \\\\ \n",
+    " -\\frac{a_{21}}{a_{22}} & 0 & -\\frac{a_{23}}{a_{22}} &\\cdots & -\\frac{a_{2n}}{a_{22}} \\\\\n",
+    "  \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    " -\\frac{a_{n1}}{a_{nn}} & -\\frac{a_{n2}}{a_{nn}} & -\\frac{a_{n3}}{a_{nn}}&\\cdots & 0 \\\\\n",
+    "\\end{array} \\right]\n",
+    "\\,\\,\\,\\,\\,\\,$\n",
+    "e\n",
+    "$\\,\\,\\,\\,\\,\\,g = \n",
+    "\\left[\\begin{array}{c} \n",
+    "\\frac{b_1}{a_{11}} \\\\ \n",
+    "\\frac{b_2}{a_{22}} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{b_n}{a_{nn}}\\\\\n",
+    "\\end{array} \\right]\n",
+    "$\n",
+    "</p>\n",
+    "\n",
+    "ou, ainda,\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\left[\\begin{array}{c} \n",
+    "x_1^{k+1} \\\\ \n",
+    "x_2^{k+1} \\\\\n",
+    "\\vdots \\\\\n",
+    "x_n^{k+1}\\\\\n",
+    "\\end{array} \\right]\n",
+    "= \n",
+    "\\left[\\begin{array}{ccccc} \n",
+    " 0 & -\\frac{a_{12}}{a_{11}} & -\\frac{a_{13}}{a_{11}} &\\cdots & -\\frac{a_{1n}}{a_{11}} \\\\ \n",
+    " -\\frac{a_{21}}{a_{22}} & 0 & -\\frac{a_{23}}{a_{22}} &\\cdots & -\\frac{a_{2n}}{a_{22}} \\\\\n",
+    "  \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    " -\\frac{a_{n1}}{a_{nn}} & -\\frac{a_{n2}}{a_{nn}} & -\\frac{a_{n3}}{a_{nn}}&\\cdots & 0 \\\\\n",
+    "\\end{array} \\right]\n",
+    "\\left[\\begin{array}{c} \n",
+    "x_1^{k} \\\\ \n",
+    "x_2^{k} \\\\\n",
+    "\\vdots \\\\\n",
+    "x_n^{k}\\\\\n",
+    "\\end{array} \\right]\n",
+    "+\n",
+    "\\left[\\begin{array}{c} \n",
+    "\\frac{b_1}{a_{11}} \\\\ \n",
+    "\\frac{b_2}{a_{22}} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\frac{b_n}{a_{nn}}\\\\\n",
+    "\\end{array} \\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convergência\n",
+    "\n",
+    "Seja uma norma matricial consistente com alguma norma vetorial, se $\\parallel H \\parallel < 1$ então a sequência será convergente. Em geral, para verificar a convergência usamos a norma infinito \n",
+    "\n",
+    "$$\\parallel H \\parallel _\\infty = max_{1 \\leq i \\leq n}  \\left\\{ \\sum_{j=1}^n |a_{ij}|  \\right\\} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "## Exemplos  Jacobi-Richardson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 44,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -140,9 +354,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -194,10 +407,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 46,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -207,7 +418,7 @@
       " [-0.2  0.  -0.2]\n",
       " [-0.2 -0.3  0. ]]\n",
       "Norma inf. de H= 0.5\n",
-      "[  9.99480160e-01   1.99932320e+00  -7.53200000e-04]\n"
+      "[ 9.9948016e-01  1.9993232e+00 -7.5320000e-04]\n"
      ]
     }
    ],
@@ -289,18 +500,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 47,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(0.8000, 1.0333, -0.0778) err= 1.0\n",
-      "(0.9911, 1.0015, -0.0035) err= 0.190828402367\n",
-      "(0.9996, 1.0001, -0.0002) err= 0.00849326793298\n"
+      "(0.9911, 1.0015, -0.0035) err= 0.19082840236686394\n",
+      "(0.9996, 1.0001, -0.0002) err= 0.00849326793297563\n"
      ]
     }
    ],
@@ -333,10 +542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -378,10 +585,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -509,16 +714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 50,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.0203  0.2715  0.2559  0.2039  0.0885]\n"
+      "[0.0203 0.2715 0.2559 0.2039 0.0885]\n"
      ]
     }
    ],
@@ -551,25 +754,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 51,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.2     0.3333  0.1111  0.1683  0.0583]\n",
-      "[ 0.0669  0.2965  0.2304  0.1912  0.0796]\n",
-      "[ 0.0262  0.2763  0.2461  0.2042  0.0872]\n",
-      "[ 0.0229  0.2728  0.2561  0.2027  0.088 ]\n",
-      "[ 0.0201  0.2715  0.255   0.2043  0.0886]\n",
-      "[ 0.0205  0.2715  0.2562  0.2037  0.0885]\n",
-      "[ 0.0202  0.2714  0.2558  0.204   0.0886]\n",
-      "[ 0.0203  0.2715  0.256   0.2039  0.0885]\n",
-      "[ 0.0202  0.2714  0.2559  0.2039  0.0885]\n",
-      "[ 0.0203  0.2715  0.2559  0.2039  0.0885]\n"
+      "[0.2    0.3333 0.1111 0.1683 0.0583]\n",
+      "[0.0669 0.2965 0.2304 0.1912 0.0796]\n",
+      "[0.0262 0.2763 0.2461 0.2042 0.0872]\n",
+      "[0.0229 0.2728 0.2561 0.2027 0.088 ]\n",
+      "[0.0201 0.2715 0.255  0.2043 0.0886]\n",
+      "[0.0205 0.2715 0.2562 0.2037 0.0885]\n",
+      "[0.0202 0.2714 0.2558 0.204  0.0886]\n",
+      "[0.0203 0.2715 0.256  0.2039 0.0885]\n",
+      "[0.0202 0.2714 0.2559 0.2039 0.0885]\n",
+      "[0.0203 0.2715 0.2559 0.2039 0.0885]\n"
      ]
     }
    ],
@@ -611,11 +812,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### Referências\n",
+    "\n",
+    "FRANCO, Neide Maria Bertoldi . Cálculo Numérico.  Pearson, 2006.\n",
+    "\n",
+    "KIUSALAAS, Jaan. Numerical Methods in Engineering with Python 3. Cambridge: University Press, 2013.\n",
+    "\n",
+    "RUGGIERO, M.A.G. & LOPES, V.L. Cálculo numérico: aspectos teóricos e computacionais. São Paulo: Makron Books, 1996.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -636,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
