--- a/0_PYTHON_NUMERICO_BASICO/0.1_python_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.1_python_basico.ipynb
@@ -6,58 +6,79 @@
    "source": [
     "# 0.1 O Básico Sobre Python\n",
     "\n",
-    "Python é uma linguagem orientada a objetos desenvolvida no final da década de 1980 como uma linguagem de script. Apesar de Python não ser a linguagem preferida de engenheiros e cientistas, existe um número considerável e crescente de usuários na comunidade de programadores. Python pode ser visto como uma linguagem emergente, porque ele ainda está sendo desenvolvido e reﬁnada. Em seu estado atual, é uma excelente linguagem para o desenvolvimento de aplicações e protótipos para computação científica e engenharia. Python também é conhecida por ser de fácil e rápido aprendizado.\n",
+    "Python é uma linguagem de programação que suporta os três principais paradigmas atuais para desenvolvimento de software:\n",
     "\n",
-    "Os programas Python, em geral, não são compilados em código de máquina, mas são executados por um interpretador. A grande vantagem de uma linguagem interpretada é que os programas podem ser testados e depurados facilmente, permitindo ao usuário concentrar-se mais na lógia e funcionalmento do programa do que com a sintaxe e escrita do programa. Como não há necessidade de compilar, vincular e executar após cada correção, os programas Python podem ser desenvolvidos em tempo muito mais curto do que os programas Fortran ou C equivalentes. Uma desvantagem é que os programas interpretados não produzem aplicativos autônomos, ou seja, para serem executados, é preciso um computador com o interpretador python instalado.\n",
+    "* Programação orientada a objetos (_object oriented programming_, mais conhecida como _OOP_)\n",
+    "* Programação funcional (_functional programming_, ou _FP_)\n",
+    "* Programação imperativa (_imperative programming_, ou _IP_)\n",
     "\n",
-    "Python também tem outras vantagens sobre as outras liguagens mais utilizadas que são importantes em uma ambiente de aprendizagem: \n",
-    "* é _código aberto_, o que significa que é gratuito; \n",
-    "* está incluído na maioria das distribuições linux e disponível para a maioria dos sitemas operacionais. Um programa pode ser executado em diferentes sistemas sem necessitar de modificações;\n",
-    "* é fácil de aprender e produz códigos mais legíveis que a maioria das linguagens de programação;\n",
-    "* as suas extensões são fáceis de instalar e usar;\n",
-    "* python implementa conceitos comuns de orientação a objeto, tais como, classes, métodos, instâncias, etc;\n",
+    "Python começou a ser desenvolvido em 1989 por Guido van Rossum como uma linguagem de script e hoje em dia é uma das linguagens de programaçao mais populares. Em seu estado atual, é uma excelente linguagem para o desenvolvimento de aplicações e protótipos para computação científica e engenharia. Também é conhecida por ser de fácil e rápido aprendizado, com uma sintaxe muito simples.\n",
+    "\n",
+    "Os programas Python, em geral, não são diretamente compilados em código de máquina, mas sim executados por um programa auxiliar, chamado de interpretador (_interpreter_). Em contraste, as linguagens C, Java e Fortran são todas compiladas.\n",
+    "\n",
+    "A grande vantagem de uma linguagem interpretada é que os programas podem ser testados e depurados mais facilmente, por não requerer os passos adicionais: compilar, vincular e executar após cada correção. Os programas Python podem ser desenvolvidos em tempo muito mais curto do que os programas Fortran ou C equivalentes. Uma desvantagem é que os programas interpretados não produzem aplicativos executáveis _autônomos_; para se executar um determinado script Python, é necessário que o computador do usuário também possua o interpretador Python instalado.\n",
+    "\n",
+    "Python também tem outras vantagens sobre algumas das liguagens mais utilizadas que são importantes em um ambiente de aprendizagem: \n",
+    "* É _livre_ e de _código aberto_ (_free_ e _open source_); em particular é gratuito; \n",
+    "* Está incluso na maioria das distribuições Linux e disponível para a maioria dos sitemas operacionais. Além disto, um programa Python pode ser executado em diferentes sistemas sem necessitar de modificações;\n",
+    "* É fácil de aprender e produz códigos mais legíveis que a maioria das linguagens de programação;\n",
+    "* Suas extensões são fáceis de se instalar e usar;\n",
+    "* Implementa conceitos comuns à orientação a objetos, tais como: classes, métodos, instâncias, etc;\n",
     "\n",
     "\n",
     "## Tipos de dados e operações básicas\n",
     "\n",
-    "Os tipos de dados primitivos (já embutidos no núcleo da linguagem) disponíveis em Python podem ser simples: números (int, long, float, complex) ou cadeias de caracteres (strings), ou compostos: listas, dicionários, tuplas e conjuntos. Além dos tipos primitivos, existem os tipos de dados que são definidos pelo usuário. \n",
+    "Os principais tipos de dados primitivos (já embutidos no núcleo da linguagem) disponíveis em Python são:\n",
     "\n",
-    "Os dados são armazenados em **variáveis** e podem ser processados usando funções ou operadores. Python usa *tipagem dinâmica*, o que significa que uma variável pode mudar o tipo do dado que armazena dinamicamente. O exemplo abaixo mostra algumas operações e mudança do tipo de dados armazenados.\n",
+    "* Booleanos (**bool**), que só pode assumir os valores **True** (verdadeiro) e **False** (falso);\n",
+    "* Numéricos, como **int**, **long**, **float** e **complex**;\n",
+    "* Cadeias de caracteres (**str**, abreviação de _string_);\n",
+    "* Seqüências: listas (**list**), tuplas (**tuple**) e range (**range**);\n",
+    "* Associações/dicionários (**dict**);\n",
+    "* Conjuntos (**set**).\n",
+    "\n",
+    "Além destes e de mais alguns outros, existem os tipos de dados que podem ser definidos pelo usuário. \n",
+    "\n",
+    "Os dados são armazenados em **variáveis** e podem ser processados usando funções ou operadores. Python usa *tipagem dinâmica*, o que significa que uma variável pode mudar o tipo do dado que armazena dinamicamente, ou seja, no decorrer do programa. O exemplo abaixo mostra algumas operações e mudanças do tipo de dados armazenados.\n",
     "\n",
     "**EXEMPLO 1**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tipo do dado em a: <class 'int'>\n",
-      "Tipo do dado em b: <class 'float'>\n",
-      "7.4\n"
+      "Tipo e valor da variável a: True <class 'bool'>\n",
+      "Tipo e valor da variável a: 3.1 <class 'float'>\n",
+      "Tipo e valor da variável b: 2.2 <class 'float'>\n",
+      "Tipo e valor da variável c: 7.5 <class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "a = 3\n",
-    "print (\"Tipo do dado em a:\",type(a))\n",
+    "a = True\n",
+    "print (\"Tipo e valor da variável a:\", a, type(a))\n",
+    "\n",
+    "a = 3.1\n",
+    "print (\"Tipo e valor da variável a:\", a, type(a))\n",
     "\n",
     "b = 2.2\n",
-    "print (\"Tipo do dado em b:\",type(b))\n",
+    "print (\"Tipo e valor da variável b:\", b, type(b))\n",
     "\n",
     "c = a + 2*b\n",
-    "print (c)"
+    "print (\"Tipo e valor da variável c:\", c, type(c))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os operadores aritméticos usados em python são\n",
+    "Os operadores aritméticos usados em Python são\n",
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/0_PYTHON_NUMERICO_BASICO/imagens/operadores_relacionais.jpg\" width=\"440\">\n",
     "\n",
@@ -68,19 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os operadores aritméticos usados em python são\n",
-    "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/0_PYTHON_NUMERICO_BASICO/imagens/operadores_relacionais.jpg\" width=\"440\">\n",
-    "\n",
-    "\n",
-    "Os operadores lógicos são **and**, **or** e **not**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O exemplo a seguir mostra algumas formas de modificar o tipo dado armazenado em uma variável.\n",
+    "O exemplo a seguir mostra algumas mudanças do tipo de dado armazenado em uma única variável.\n",
     "\n",
     "**EXEMPLO 2**"
    ]
@@ -104,19 +113,19 @@
    ],
    "source": [
     "x = 7\n",
-    "print (x,type(x))\n",
+    "print(x,type(x))\n",
     "\n",
     "x = 7/3\n",
-    "print (x,type(x))\n",
+    "print(x,type(x))\n",
     "\n",
     "x = int(x)\n",
-    "print (x,type(x))\n",
+    "print(x,type(x))\n",
     "\n",
     "x = complex(x)\n",
-    "print (x,type(x))\n",
+    "print(x,type(x))\n",
     "\n",
     "x = str(x)\n",
-    "print (x,type(x))"
+    "print(x,type(x))"
    ]
   },
   {
@@ -220,7 +229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A divisão entre inteiros em Python 3 resulta em  um número real (ao contrário de Python 2, onde resulta somente a parte inteira)."
+    "A divisão entre inteiros em Python 3 resulta em  um número real."
    ]
   },
   {
@@ -247,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pode-se forçar para que o resultado da divisão seja inteiro em Python 3 com o operador `//`: "
+    "Pode-se forçar para que o resultado da divisão seja inteiro em Python 3 com o operador `//` (observe que o resultado é obtido através de truncamento, i.e., é o maior inteiro menor ou igual ao quociente): "
    ]
   },
   {
@@ -1581,7 +1590,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1595,7 +1604,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
