--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "As duas primeiras etapas consistem na **fase de modelagem** e a terceira é a **fase de resolução**. Tanto na fase de modelagem quanto na fase de resolução podem ocorrer erros, mesmo que esses erros não tornem a resposta obtida inválida ou inútil. Em geral busca-se uma solução aproximada, dentro de uma precisão pré-estabelecida.\n",
     "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/erros.png\" width=\"400\">\n",
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/erros.png\" width=\"600\">\n",
     "\n",
     "Os erros na fase de modelagem podem ser decorrentes de medições imprecisas, erros de anotação, simplificações e deduções equivocadas. Os erros na fase de resolução ocorrem devido a erros de cálculo, escolha de um método ineficaz, aproximações numéricas ou arredondamentos. Dizemos que métodos analíticos de resolução geram soluções exatas e métodos numéricos geram soluções aproximadas. \n",
     "\n",
@@ -28,11 +28,11 @@
    "source": [
     "## Representação de números em ponto flutuante\n",
     "\n",
-    "Os métodos numéricos são especialmente úteis quando utilizamos computadores para realizar o processamento numérico. No entanto, a representação de números reais nas máquinas é feita, geralmente, utilizando o **sistema de ponto flutuante normalizado** e **base binária**. Ou seja, os números reais são armazenados em um conjunto fixo de bits. Cada bit pode assumir somente dois valores, 0 ou 1 (corte ou passagem de energia, respectivamente). \n",
+    "Os métodos numéricos são especialmente úteis quando utilizamos computadores para realizar os cálculos, no entanto, existem limitações na capacidade de armazenar certos números internamente. A representação de números reais nas máquinas é feita, geralmente, utilizando o **sistema de ponto flutuante normalizado** e **base binária**. Ou seja, os números reais são armazenados em um conjunto fixo de bits. Cada bit pode assumir somente dois valores, 0 ou 1 (corte ou passagem de energia, respectivamente), dessa forma, nem todos os números reais podem ser representados de forma exata.\n",
     "\n",
     "Por exemplo, o número $0.125$, na base decimal, pode ser escrito como \n",
     "\n",
-    "$$0.125 = 1/10 + 2/100 + 5/1000$$\n",
+    "$$0.125 = \\frac{1}{10} + \\frac{2}{100} + \\frac{5}{1000}$$\n",
     "ou, equivalentemente, \n",
     "$$0.125 = 1 \\times 10^{-1} + 2 \\times 10^{-2} + 5\\times 10^{-3}$$\n",
     "\n",
@@ -52,7 +52,7 @@
     "\n",
     "em que 12345 são os algarismos significativos e 1 é o expoente da base 10.\n",
     "\n",
-    "A maioria das máquinas que usamos atualmente operam na base 2 (binária) em que os algarismos disponíveis são 0 e 1. O número decimal $1.2$, pode ser representado na base binária pelo número $1.00110011001100110011 \\overline{0011}$ que tem infinitas casas após a vírgula, portanto nem todos algarismos significativos poderão ser armazenados. Supondo que apenas 10 algarismos podem ser armazenados, sua respresentação será\n",
+    "A maioria das máquinas que usamos atualmente operam na base 2 (binária) em que os algarismos disponíveis são 0 e 1. O número decimal $1.2$, pode ser representado na base binária pelo número $1.00110011001100110011 \\overline{0011}$ que tem infinitas casas após a vírgula, portanto nem todos algarismos significativos poderão ser armazenados. Supondo que apenas 10 algarismos possam ser armazenados, sua respresentação será\n",
     "\n",
     "$$ 0.1001100110 \\times 2^1$$\n",
     "\n",
@@ -508,11 +508,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "## Referências\n",
+    "\n",
+    "Cálculo Numérico: aprendizagem com apoio de software, Selma Arenales e Artur Darezzo, 2ª ed, Cengage Learning Brasil, 2016.\n",
+    "\n",
+    "Métodos Numéricos para Engenharia. Steven C. Chapra; Raymond P. Canale. 7ª Edição. Editora McGraw-Hill."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -533,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
